--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.9.1
 Django==5.2.4
 django-cors-headers==4.7.0
+django-filter==25.2
+django-phonenumber-field==8.1.0
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.1
+networkx==3.5
 numpy==2.3.2
 pandas==2.3.1
+phonenumbers==9.0.12
 PuLP==3.2.2
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
