--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-filter==25.2
 django-phonenumber-field==8.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 networkx==3.5
 numpy==2.3.2
+packaging==25.0
 pandas==2.3.1
 phonenumbers==9.0.12
 PuLP==3.2.2
